# APFC

./: .buildinfo  .pre-commit-config.yaml  CMakeLists.txt  README.md  export  genindex.html  index.html  objects.inv  precomm_test.py  precomm_test2.py  pyproject.toml  requirements.txt  run.sh  search.html  searchindex.js
.doctrees/: index.doctree
.doctrees/background/: apfc_functional.doctree  bibliography.doctree  fourier.doctree  index.doctree  init.doctree  sim_schemes.doctree  surf_en_stiff_wulf.doctree
.doctrees/code_doc/: config_reference.doctree  index.doctree
.doctrees/updates/: 2023-01-04.doctree  2023-01-16.doctree  2023-01-24.doctree  2023-02-20.doctree  2023-02-21.doctree  2023-03-14.doctree  2023-04-17.doctree  index.doctree
.github/workflows/: documentation.yml
_sources/background/: sim_schemes.md.txt
_sources/code_doc/: index.md.txt
_sources/updates/: 2023-02-21.md.txt  2023-03-14.md.txt  2023-04-17.md.txt
background/: apfc_functional.html  bibliography.html  fourier.html  index.html  init.html  sim_schemes.html  surf_en_stiff_wulf.html
code_doc/: config_reference.html  index.html
code_doc/calculations/: index.html  initialize.html  observables.html  params.html  triangular.html
code_doc/manage/: index.html  read_write.html  utils.html
code_doc/plots/: fields.html  index.html  other.html
code_doc/sim/: fft_sim.html  index.html  runners.html  (+1 more)
scripts/: aaa.py  fft.py  fft_apfc.py  fft_apfc2.py  fft_min.py  fft_proto.ipynb  run_line_chain.sh  stencil_calc_surf_en.py  watchEta.py  watchEta2.py  watchEtaCplx.py
src/: analysis.py  apfc-eval.py  apfc-gen-param-set.py  apfc-run.py  calcGrainSurfEn.py  calcLine1DSurfEn.py  calcLineSurfEn.py  eta_builder.py  evaluate.py  fft.cpp  grainSim.py  plotLineSim.py  plots.ipynb  run_fft_sim.py  sim.py  stencil.cpp  watch.py  watch1D.py  watchBasicAll.py  watchn0.py  watchn01d.py
updates/: 2023-01-04.html  2023-01-16.html  2023-01-24.html  2023-02-20.html  2023-02-21.html  2023-03-14.html  2023-04-17.html  index.html
(+109 files in other folders)
