[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apfc"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "maromei", email = "maxrob.meier@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[tool.hatch.version]
path = "src/python/__about__.py"

[project.urls]
Documentation = "https://maromei.github.io/APFC"
Issues = "https://github.com/maromei/apfc/issues"
Source = "https://github.com/maromei/apfc"

[tool.hatch.envs.default]
dependencies = [
  "seaborn",
  "numpy",
  "pandas",
  "matplotlib",
  "scipy"
]

[tool.hatch.envs.doc]
skip-install = true
detached = true
python = "3.10"
dependencies = [
  "sphinx",
  "sphinx-autobuild",
  "furo",
  "myst-parser",
  "breathe"
]

[tool.hatch.envs.doc.scripts]
serve = "sphinx-autobuild docs/sphinx/source docs/sphinx/build/html"

[tool.hatch.envs.styles]
skip-install = true
detached = true
python = "3.10"
dependencies = [
  "pre-commit",
  "black"
]
